<?xml version="1.0"?>
<package>
  <name>move3d_ros_lib</name>
  <version>0.1.0</version>
  <description>The move3d_ros_lib package</description>

  <maintainer email="jules.waldhart@laas.fr">Jules Waldhart</maintainer>
  <maintainer email="aurelie.clodic@laas.fr">Aurélie Clodic</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- <url type="website">http://wiki.ros.org/move3d_ros_lib</url> -->

  <author email="jules.waldhart@laas.fr">Jules Waldhart</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend> toaster_msgs </build_depend>
  <build_depend> message_generation </build_depend>
  <build_depend> pluginlib </build_depend>
  <build_depend> tf </build_depend>
  <run_depend> toaster_msgs </run_depend>
  <run_depend> message_runtime </run_depend>
  <run_depend> pluginlib </run_depend>
  <run_depend> tf </run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <move3d_ros_lib plugin="${prefix}/default_updaters.xml" />

  </export>
</package>
